2007-04-03  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-main.h: Add TODO item.

	* bin/schroot-base/schroot-base-main.cc (run): Add additional
	information output for caught logic_error exceptions.

2007-04-03  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/Makefile.am (libschroot_base_la_SOURCES): Add
	schroot-base-option-action.(cc|h).

2007-04-03  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-option-action.(cc|h): New class to
	manage actions specified by command-line options.

2007-04-03  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/Makefile.am: New file, based on
	bin/schroot/Makefile.am.

	* configure.ac: Add bin/schroot-base/Makefile.

	* Move bin/schroot/schroot-base-* to bin/schroot-base.  Update all
	dependent files to use the new path.

2007-04-03  Roger Leigh  <rleigh@debian.org>

	* Remove schroot, dchroot, dchroot-dsa and csbuild directories,
	now they have been moved to /bin.

2007-04-02  Roger Leigh  <rleigh@debian.org>

	* AUTHORS: Add Federico Di Gregorio.

	* debian/changelog: Update init script to use a default file.

2007-04-01  Roger Leigh  <rleigh@debian.org>

	* Move schroot, dchroot, dchroot and csbuild to a new
	subdirectory, bin.

	* bin/*/Makefile.am (LOCAL_CXXFLAGS): Add -I$(top_srcdir)/bin.

	* bin/Makefile.am: New file.
	(SUBDIRS): schroot dchroot dchroot-dsa csbuild

	* configure.ac: Use new file locations.

	* doc/schroot.dox.in: Use new source locations.  Disable call
	graph.

2007-04-01  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Create new packages sbuild-common, libsbuild1
	and libsbuild1-dev.

	* sbuild/Makefile.am (lib_LTLIBRARIES): Install libsbuild in
	$(libdir).
	(pkgincludedir): New variable, header location.
	(pkginclude_HEADERS): Headers to install.
	(pkgconfigdatadir): New variable, pkg-config data location.
	(pkgconfigdata_DATA): pkg-config data to install.
	(libsbuild_version): New variable, libsbuld versioning.