@@ -40,10 +40,11 @@ using sbuild::_;
 using schroot::options_base;
 using namespace csbuild;
 
-main_base::main_base (std::string const& program_name,
-		      std::string const& program_usage,
-		      schroot::options_base::ptr& options):
-  schroot::main_base(program_name, program_usage, options),
+main_base::main_base (std::string const&          program_name,
+		      std::string const&          program_usage,
+		      schroot::options_base::ptr& options,
+		      bool                        use_syslog):
+  schroot::main_base(program_name, program_usage, options, use_syslog),
   use_csbuild_conf(false)
 {
 }
