@@ -45,7 +45,7 @@ using namespace dchroot;
 main_base::main_base (std::string const& program_name,
 		      std::string const& program_usage,
 		      schroot::options_base::ptr& options):
-  schroot::main_base(program_name, program_usage, options),
+  schroot::main_base(program_name, program_usage, options, true),
   use_dchroot_conf(false)
 {
 }
